start.htm: header broken links (copied from readme.htm)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/START.htm
+++ b/START.htm
@@ -18,14 +18,13 @@
  </head>
  <body>
  <div class="top">
-  <div class="top-header"><a href="/"><img src="Docs/images/beagle_logo_326x60.png" alt="Beagle Board - beagleboard.org" style="background:white;border:0;width:326;height:60;" /></a>
+  <div class="top-header"><a href="http://beagleboard.org"><img src="Docs/images/beagle_logo_hdr.gif" alt="beagleboard.org" border="0" width="326" height="60" /></a>
   
   <div class="social">
-    <span style="padding-left:8px"><a href="https://facebook.com/beagleboard"><img src=  "Docs/images/icon_facebook.png" style="width:27;height:28;border:0" alt="facebook" /></a></span>
-    <span style="padding-left:8px"><a href="https://twitter.com/beagleboardorg"><img src="Docs/images/icon_twitter.png" style="width:27;height:28;border:0" alt="twitter"/></a></span>
-    <span style="padding-left:8px"><a href="https://www.linkedin.com/groups/BeagleBoardorg-1474607?gid=1474607"><img src="Docs/images/icon_linkedin.png" style="width:27;height:28;border:0" alt="linkedin" /></a></span>
-    <span style="padding-left:8px"><a href="https://www.youtube.com/user/jadonk"><img src="Docs/images/youTube-icon.png" style="width:27;height:28;border:0" alt="YouTube" /></a></span>
-    <span style="padding-left:8px"><a href="https://plus.google.com/+beagleboard"><img src="Docs/images/icon_google+.png" style="width:27;height:28;border:0" alt="google+"/></a></span>
+    <span style="padding-left:8px"><a href="http://facebook.com/beagleboard" name="header_facebook_icon"><img src="Docs/images/icon_facebook.png" width="27" height="28" alt="facebook" border="0"/></a></span>
+    <span style="padding-left:8px"><a href="http://twitter.com/beagleboardorg" name="header_twitter_icon"><img src="Docs/images/icon_twitter.png" width="27" height="28" border="0" alt="twitter"/></a></span>
+    <span style="padding-left:8px"><a href="http://www.linkedin.com/groups/BeagleBoardorg-1474607?gid=1474607&mostPopular=&trk=tyah" name="header_linkedin_icon"><img src="Docs/images/icon_linkedin.png" width="27" height="28" border="0" alt="linkedin" /></a></span>
+    <span style="padding-left:8px"><a href="http://plus.google.com/+beagleboard" name="header_google+_icon"><img src="Docs/images/icon_google+.png" width="27" height="28" border="0" alt="google+"/></a></span>
   </div> 
 </div>
    </div>
